[package]
name = "esp-max7219-nostd"
version = "0.1.0"
authors = ["Kirill Mikhailov <playfulfence@gmail.com>"]
edition = "2018"
keywords = ["max7219", "ledcontrol", "no-std"]
categories = ["hardware-support", "no-std"]

readme = "README.md"
license = "MIT"
homepage = "https://github.com/playfulFence/esp-max7219-nostd"
repository = "https://github.com/playfulFence/esp-max7219-nostd"

[features]
default = [ ]

[dependencies]
embedded-hal = "1.0.0-alpha.8"
max7219 = "0.3.1"
esp-hal-common = { package = "esp-hal-common", git = "https://github.com/esp-rs/esp-hal.git" }


