[package]
name = "esp-max7219-nostd"
version = "0.1.0"
authors = ["Kirill Mikhailov <playfulfence@gmail.com>"]
edition = "2018"
keywords = ["max7219", "ledcontrol", "no-std"]
categories = ["hardware-support", "no-std"]
resolver = "2"

readme = "README.md"
license = "MIT"
homepage = "https://github.com/playfulFence/esp-max7219-nostd"
repository = "https://github.com/playfulFence/esp-max7219-nostd"

[dependencies]
embedded-hal = "1.0.0-alpha.8"
max7219 = "0.3.1"
esp-hal-common = { version = "0.7.1", features = ["esp32", "esp32_40mhz" ], default-features = false }

